# Dnsmain

./: .gitignore  .replit  INTEGRATION_GUIDE.md  README_CONNECTIVITY.md  docker_api_149_test.py  docker_api_1_49_support.py  docker_connectivity.py  docker_connectivity_test.py  docker_output_validator.py  docker_permission_handler.py  docker_server_integration.py  docker_ssh_client_example.py  enhanced_docker_connectivity.py  fetch_all_endpoints.py  fetch_api_docs.py  fetch_container_endpoints.py  fetch_custom_templates_api.py  fetch_portainer_api_details.py  fetch_template_schemas.py  odoo.conf  paramiko_ssh_client.py  paramiko_ssh_client_README.md  pyproject.toml  replit.md  replit.nix  ssh_key_utils.py  standalone_ppk_test.py  test_dns_rename.py  test_ppk_conversion.py  test_server.py  test_ssh_client.py  test_ssh_utils.py  test_volume_container_sync.py  volume_container_relationship_fix.md
attached_assets/: Pasted--File-home-ibra-odoo17-odoo-tools-convert-py-line-569-in-tag-root-raise-ParseError-whil-1744676523897.txt  Pasted--xml-version-1-0-encoding-utf-8-odoo-data-record-id-open-account-charts--1744735011833.txt  Pasted-025-05-01-18-44-59-277-280356-ERROR-17-odoo-addons-j-portainer-models-portainer-api-All-template-cr-1746125137062.txt  Pasted-2025-05-01-15-54-38-726-269522-INFO-17-odoo-modules-registry-verifying-fields-for-every-extended-mo-1746114920865.txt  Pasted-2025-05-01-16-45-04-785-272812-INFO-17-odoo-addons-j-portainer-models-portainer-api-Trying-template-1746117965692.txt  (+20 more)
aws_ec2/: __manifest__.py
aws_route53/: __init__.py  __manifest__.py
(+394 files in other folders)
