[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ansi2html>=1.9.2",
    "babel>=2.17.0",
    "boto3>=1.37.34",
    "cryptography>=44.0.2",
    "decorator>=5.2.1",
    "docutils>=0.21.2",
    "feedparser>=6.0.11",
    "gevent-websocket>=0.10.1",
    "greenlet>=3.2.1",
    "jinja2>=3.1.6",
    "libsass>=0.23.0",
    "lxml>=5.4.0",
    "markupsafe>=3.0.2",
    "num2words>=0.5.14",
    "ofxparse>=0.21",
    "paramiko>=3.5.1",
    "passlib>=1.7.4",
    "pillow>=11.2.1",
    "polib>=1.2.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pydot>=4.0.0",
    "pypdf2>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-ldap>=3.4.4",
    "python-stdnum>=2.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "qrcode>=8.2",
    "reportlab>=4.4.1",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
    "validator-collection>=1.5.0",
    "webssh>=1.6.2",
    "xlrd>=2.0.1",
    "xlsxwriter>=3.2.3",
    "zeep>=4.3.1",
]
